[gd_scene load_steps=19 format=2]

[ext_resource path="res://characters/BaseChar.gdshader" type="Shader" id=1]
[ext_resource path="res://Yharim/Characters/Yharim/UI/AuricChargeBarUnder.png" type="Texture" id=2]
[ext_resource path="res://Yharim/Characters/Yharim/Fx/AuricUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Yharim/Characters/Yharim/UI/YharimPlayerInfo.gd" type="Script" id=4]
[ext_resource path="res://Yharim/Characters/Yharim/UI/AuricChargeBarBlue.png" type="Texture" id=5]
[ext_resource path="res://Yharim/Characters/Yharim/UI/AuricChargeBarTop.png" type="Texture" id=6]
[ext_resource path="res://Yharim/Characters/Yharim/UI/AuricChargeBarPro6.png" type="Texture" id=7]
[ext_resource path="res://Yharim/Characters/Yharim/UI/AuricChargeBarRed.png" type="Texture" id=8]
[ext_resource path="res://Yharim/Characters/Yharim/Fx/OverChargeBarVFX.tscn" type="PackedScene" id=9]
[ext_resource path="res://Yharim/Characters/Yharim/Fx/BarEffect2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Yharim/Characters/Yharim/Fx/AuricUICharge.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/default_font.tres" type="DynamicFont" id=12]
[ext_resource path="res://Yharim/Characters/Yharim/UI/OppresionBarTop.png" type="Texture" id=13]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/use_extra_color_1 = false
shader_param/use_extra_color_2 = false
shader_param/extra_replace_color_1 = Color( 1, 0, 1, 1 )
shader_param/extra_replace_color_2 = Color( 1, 0, 1, 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/extra_color_1 = Color( 1, 1, 1, 1 )
shader_param/extra_color_2 = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/use_extra_color_1 = false
shader_param/use_extra_color_2 = false
shader_param/extra_replace_color_1 = Color( 1, 0, 1, 1 )
shader_param/extra_replace_color_2 = Color( 1, 0, 1, 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/extra_color_1 = Color( 1, 1, 1, 1 )
shader_param/extra_color_2 = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/use_extra_color_1 = false
shader_param/use_extra_color_2 = false
shader_param/extra_replace_color_1 = Color( 1, 0, 1, 1 )
shader_param/extra_replace_color_2 = Color( 1, 0, 1, 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/extra_color_1 = Color( 1, 1, 1, 1 )
shader_param/extra_color_2 = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/use_extra_color_1 = false
shader_param/use_extra_color_2 = false
shader_param/extra_replace_color_1 = Color( 1, 0, 1, 1 )
shader_param/extra_replace_color_2 = Color( 1, 0, 1, 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/extra_color_1 = Color( 1, 1, 1, 1 )
shader_param/extra_color_2 = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="Gradient" id=5]
interpolation_mode = 1
offsets = PoolRealArray( 0, 0.715084, 0.882682 )
colors = PoolColorArray( 1, 0, 0, 1, 0.858398, 0.700802, 0.700802, 1, 0.913086, 0.477943, 0.477943, 1 )

[node name="PlayerInfo" type="Control"]
margin_right = 143.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 49.0
margin_top = 1.0
margin_right = 145.0
margin_bottom = 41.0

[node name="BarUnder" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 40.0
mouse_filter = 0
texture = ExtResource( 2 )

[node name="Charge" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 63.0
margin_top = 6.0
margin_right = 133.0
margin_bottom = 46.0
custom_constants/separation = 10

[node name="1" type="TextureRect" parent="Charge"]
unique_name_in_owner = true
margin_right = 6.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="2" type="TextureRect" parent="Charge"]
unique_name_in_owner = true
margin_left = 16.0
margin_right = 22.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="3" type="TextureRect" parent="Charge"]
unique_name_in_owner = true
margin_left = 32.0
margin_right = 38.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="4" type="TextureRect" parent="Charge"]
unique_name_in_owner = true
margin_left = 48.0
margin_right = 54.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="5" type="TextureRect" parent="Charge"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 70.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="Overcharge" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 49.0
margin_top = 1.0
margin_right = 145.0
margin_bottom = 41.0

[node name="OC" type="TextureRect" parent="Overcharge"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Oppresion" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 49.0
margin_top = 1.0
margin_right = 145.0
margin_bottom = 41.0

[node name="OP" type="TextureRect" parent="Oppresion"]
margin_right = 96.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 49.0
margin_top = 1.0
margin_right = 145.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( -138, 5 )
hint_tooltip = "Auric Charge, gain it from
combo count, guardbreaks, and hitting blocked opps"

[node name="Bar" type="TextureRect" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="AuricUI" parent="HBoxContainer2" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
material = SubResource( 1 )
position = Vector2( 49, 7 )

[node name="Red" parent="HBoxContainer2" instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false
material = SubResource( 2 )
position = Vector2( 49, 15 )

[node name="BarEffect2" parent="HBoxContainer2" instance=ExtResource( 10 )]
unique_name_in_owner = true
visible = false
material = SubResource( 3 )
position = Vector2( 49, 0 )

[node name="AuricUICharge" parent="HBoxContainer2" instance=ExtResource( 11 )]
unique_name_in_owner = true
material = SubResource( 4 )
one_shot = false
lifetime = 3600.0

[node name="AuricUICharge2" parent="HBoxContainer2" instance=ExtResource( 11 )]
unique_name_in_owner = true
material = SubResource( 4 )
one_shot = false
lifetime = 3600.0

[node name="CPUParticles2D" parent="HBoxContainer2/AuricUICharge2" index="1"]
color_initial_ramp = SubResource( 5 )

[node name="OppCounter" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color( 0.00784314, 0.992157, 1, 0.356863 )
margin_left = 31.0
margin_top = -1.0
margin_right = 49.0
margin_bottom = 10.0
hint_tooltip = "Oppresion cooldown in ticks"
mouse_filter = 1
custom_fonts/font = ExtResource( 12 )
text = "120"

[node name="OverCounter" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color( 0.858824, 0.670588, 0.670588, 0.356863 )
margin_left = 31.0
margin_top = 8.0
margin_right = 49.0
margin_bottom = 19.0
hint_tooltip = "Time left on Overcharge in ticks"
mouse_filter = 1
custom_fonts/font = ExtResource( 12 )
text = "300"

[editable path="HBoxContainer2/AuricUICharge"]
[editable path="HBoxContainer2/AuricUICharge2"]
